refactor: make offheap allocators ServiceLoader-only